2006-09-27  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/gnu/classpath/tools/javah/CniIncludePrinter.java (CniIncludePrinter):
	Accept three additional arguments.
	(writePreambleImpl): New method.
	(getPrintStreamImpl): Likewise.
	(printClass): Adapted to use new methods in Printer superclass.
	* tools/gnu/classpath/tools/javah/CniStubPrinter.java: Likewise.
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java: Likewise.
	* tools/gnu/classpath/tools/javah/JniStubPrinter.java: Likewise.
	* tools/gnu/classpath/tools/javah/Main.java (outFileName): New field.
	(force): Likewise.
	(getParser): Add support for -o option.
	Check that only one of -d or -o is defined.
	Add support for -jni option.
	Add support for -force option.
	(makeOutputFile): New method.
	(writeHeaders): Removed File argument from signature.
	(run): Take into account newly added fields.
	Invoke concrete PrintStream implementations with augmented constructors.
	* tools/gnu/classpath/tools/javah/Printer.java (outputFileObject): New field.
	(isDirectory): Likewise.
	(force): Likewise.
	(wrotePreamble): Likewise.
	(Printer): Changed ctor to accept three additional arguments.
	(printClass): Changed signature to accept one ClassWrapper argument.
	(writePreambleImpl): New abstract method.
	(getPrintStreamImpl): Likewise.
	(getPrintStream): New method.
	(writePreamble): Likewise.

2006-09-26  Tania Bento  <tbento@redhat.com>

	* java/awt/GridLayout.java
	(toString): There is no common before hgap.
	* java/awt/Rectangle.java
	(Rectangle(Rectangle)): Throw NPE if Rectangle is null.
	(Rectangle(Point, Rectangle)): Throw NPE if either Point or 
	Rectangle is null.
	(Rectangle(Point)): Throw NPE if Point is null.
	(Rectangle(Dimension)): Throw NPE if Dimension is null.

2006-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(FileIcon16.paintIcon): Apply vertical shift by the number of pixels
	returned by getShift(),