@@ -1,3 +1,11 @@
+2006-09-26  Tom Tromey  <tromey@redhat.com>
+
+	* tools/gnu/classpath/tools/javah/Printer.java (Printer): Don't
+	call mkdirs in output-directory case.
+	(getPrintStream): Create output directory.
+	* tools/gnu/classpath/tools/javah/Main.java (makeOutputDirectory):
+	Don't call mkdirs.
+
 2006-09-27  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* tools/gnu/classpath/tools/javah/CniIncludePrinter.java (CniIncludePrinter):
